gobmkida/g1/defend3
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/defend3/src/engine/reading.c:2009:7: error: use of undeclared identifier 'dword_760CDC'
v16 = dword_760CDC[i] + v24; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/defend3/src/engine/reading.c:2141:7: error: use of undeclared identifier 'dword_760CDC'
v40 = dword_760CDC[v39]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/defend3/src/engine/reading.c:2265:7: error: use of undeclared identifier 'dword_760CDC'
v57 = dword_760CDC[j]; 
      ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/defend3/src/obj/1/reading.o] Error 1
